# http_service

./: .dockerignore  .env.example  .env.tmp  .gitignore  .gitmessage.txt  .pr.json  .pr_create.json  .pr_merge.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PRODUCT_REQUIREMENTS.md  PROJECT_GUIDE.md  README.md  TECHNICAL.md  chat_history.md  chat_history.md  docker-compose.yml  pyproject.toml
.cursor/: README-rules.md
.cursor/rules/: .cursorrules  database.md  docker.md  frontend.md  general.md  python.md  testing.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
monitoring/: docker-compose.yml  loki-config.yml  promtail-config.yml
monitoring/prometheus/: prometheus.yml
pgadmin/: servers.json
services/: adm_web
services/adm_web/: .cursorrules  .dockerignore  .env  .gitignore  .pr_agent.toml  CHANGELOG.md  Dockerfile  README.md  composer.json  docker-compose.yml
services/adm_web/.cursor/: README-rules.md
services/adm_web/assets/: AdminAppAsset.php  AdminAppCoreAsset.php  AdminAppLoginAsset.php
services/adm_web/commands/: CommandController.php  CronController.php  DbMockController.php
services/adm_web/components/: AIBot.php  TelegramBot.php  TelegramBotQuiz1.php
services/adm_web/config/: console.php  db-docker.php  db.php  params.php  web.php
services/adm_web/controllers/: ApiController.php  SiteController.php
services/adm_web/migrations/: m000000_000000_create_test_table.php  m250809_131102_create_admin_table.php  m250809_131356_add_fields_to_admin_table.php  m250809_131623_fix_admin_table_structure.php  m250811_092500_ensure_admins_table.php  m250811_092600_create_minimal_domain_tables.php  m250811_120000_create_manager_tables.php  m250811_160000_create_context_tables.php
services/adm_web/models/: Admin.php  BotHistory.php  BotUser.php  Dispatch.php  DispatchPushes.php  Func.php  GroupsExample.php  Holiday.php  HolidayExample.php  Image.php  ImageProducts.php  Logs.php  Manager.php  ManagerRole.php  Product.php  PromotedTopic.php  Role.php  RoutingRule.php  Settings.php  StructureCatalog.php  TgbotHistory.php  TgbotUser.php  User.php  (+4 more)
services/ai_service/: pyproject.toml
services/ai_service/src/ai_service/: db.py  main.py
services/http_service/: README.md  pyproject.toml
services/http_service/alembic/: env.py  script.py.mako
services/http_service/alembic/versions/: 202508140001_init_schema.py  202508140002_drop_tg_message.py
services/http_service/src/http_service/: audit_service.py  config.py  db.py  logging_setup.py  main.py  middleware.py  outbound.py  request_context.py  utils.py
services/http_service/src/http_service/routers/: health.py  proxy.py  tg.py  users.py
services/tg_bot/: README.md  pyproject.toml
services/tg_bot/src/tg_bot_service/: __init__.py  admin_api.py  db.py  main.py
source_docs/: base_prompt.txt  history_chat_full.txt  project_prompt.txt  хис.txt
src/http_service/: __init__.py  audit_service.py  config.py  db.py  logging_setup.py  main.py  middleware.py  mocks.py  models.py  outbound.py  request_context.py  utils.py
src/http_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_main.py  test_tg_bot_db.py  test_users.py
typings/alembic/: __init__.pyi
typings/fastapi/: __init__.pyi  testclient.pyi
(+158 files in other folders)
