[project]
name = "http-service"
version = "0.1.0"
description = "A simple FastAPI HTTP service."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
