[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_service"
version = "0.1.0"
description = "Simple AI reply service (HTTP)"
readme = "README.md"
authors = [{ name = "craz" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
]

[tool.setuptools.packages.find]
where = ["src"]


