[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg_bot_service"
version = "0.1.0"
description = "Telegram bot service (aiogram)"
readme = "README.md"
authors = [{ name = "craz" }]
requires-python = ">=3.10"
dependencies = [
  "aiogram>=3.12",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]

